--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-    <title>My Site</title>
+    <title>Hallo Yorick</title>
 </head>
 <body>
 <h1>Webdesign is my passion</h1>
+    
 </body>
 </html>
