--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+    <link rel="stylesheet" href="mystyle.css">
     <title>Hallo Yorick</title>
 </head>
 <body>
-<h1>Webdesign is my passion</h1>
+    <h1>Webdesign is my passion</h1>
     
 </body>
 </html>
