--- a/test.html
+++ b/test.html
@@ -3,4 +3,7 @@
     <link rel="stylesheet" href="mystyle.css">
     <title>testi</title>
   </head>
+  <body>
+    <h1>Galerie</h1>
+  </body>
 </html>
