--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Webdesign is my passion</h1>
     <a href="test.html">Moin</a>
+    <a href="https://www.linkedin.com/in/jacob-worm-3240072b8/">Mein LinkedIn</a>
 </body>
 </html>
