--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="mystyle.css">
-    <title>Hallo Yorick</title>
+    <title>Jacob</title>
 </head>
 <body>
     <h1>Webdesign is my passion</h1>
