--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <head>
     <link rel="stylesheet" href="mystyle.css">
-    <title>Jacob</title>
+    <title>Jacob Worm</title>
 </head>
 <body>
-    <h1>Webdesign is my passion</h1>
-    <a href="test.html">Moin</a>
-    <a href="https://www.linkedin.com/in/jacob-worm-3240072b8/">Mein LinkedIn</a>
+    <a>
+        <h1>About Me</h1>
+    </a>
+    <a class="button" href="Galerie.html">Galerie</a>
+    <a class="button" href="https://www.linkedin.com/in/jacob-worm-3240072b8/">Mein LinkedIn</a>
+    <a class="button" href="https://leetcode.com/u/user2204PK/">LeetCode</a>
 </body>
 </html>
