--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am John Doe</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>
+            <p class="header-subtitle">ASPIRING DEVELOPER</p>
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>
@@ -71,7 +71,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="assets/imgs/man.png" class="about-img"
+                    <img src="assets/imgs/" class="about-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="about-caption">
