--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+    <div class=""></div>
 
     <!-- Page Navbar -->
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
@@ -60,7 +61,7 @@
             </h1>
             <p class="header-subtitle">ASPIRING DEVELOPER</p>
 
-            <button class="btn btn-primary">Visit My Works</button>
+            <button class="btn btn-primary" href="https://www.linkedin.com/in/jacob-worm-3240072b8">Visit My Works</button>
         </div>
     </header><!-- end of page header -->
 
