--- a/index.html
+++ b/index.html
@@ -409,8 +409,9 @@
     </section><!-- end of contact section -->
 
     <!-- footer -->
+    <div class="container">
+        <footer class="footer">
 
-            </p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
