--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">I am John Doe</span>
+                <span class="down">I am Jacob</span>
             </h1>
             <p class="header-subtitle">ASPIRING DEVELOPER</p>
 
-            <button class="btn btn-primary" href="https://www.linkedin.com/in/jacob-worm-3240072b8">Visit My Works</button>
+            <button class="btn btn-primary">Visit My Works</button>
         </div>
     </header><!-- end of page header -->
 
@@ -413,7 +413,7 @@
         <footer class="footer">
 
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
+                <a href="javascript:void(0)" class=" href="https://www.linkedin.com/in/jacob-worm-3240072b8"><i class="ti-facebook"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
