--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         <footer class="footer">
 
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class=" href="https://www.linkedin.com/in/jacob-worm-3240072b8"><i class="ti-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/jacob-worm-3240072b8"><i class="ti-facebook"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
                 <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
@@ -379,13 +379,6 @@
             </div>
         </footer>
     </div> <!-- end of page footer -->
-
-    <!-- core  -->
-    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
-    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="js/script.js"></script>
 
 </body>
