--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <p style="background-image: url('assets/imgs/header.jpg');">
      <!-- page header -->
     <header id="home" class="header">
         <div class="overlay"></div>
@@ -378,7 +379,7 @@
                 <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
             </div>
         </footer>
-    </div> <!-- end of page footer -->
+    </div>
     <script src="js/script.js"></script>
 
 </body>
