--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <p style="background-image: url(assets/imgs/header.jpg);">
+    <p style="background-image: url('assets/imgs/header.jpg');">
      <!-- page header -->
     <header id="home" class="header">
         <div class="overlay"></div>
